--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -1,2 +1,12 @@
 welcome, <%= current_user.nickname %>!
 
+<h2>運営情報</h2>
+<section id="information">
+<ul>
+  <% @information.each do |topic| %>
+    <li><%= link_to("#{I18n.l(topic.published_at, format: "%-m/%-d")} #{topic.title}", topic_url(topic)) %></li>
+  <% end %>
+  <li><%= link_to("もっと見る", information_topics_url) %></li>
+</ul>
+</section>
+
